--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,81 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: white;
+  color: black;
+  padding: 20px;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+#root {
+  width: 100%;
+}
+
+.calculator-comp {
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  padding: 10px;
+  background-color: #FFFFFF;
+  margin-top: 5%;
+  border-radius: 20px;
+  box-shadow: -30px 20px 100px 10px rgba(251, 24, 78, 0.50), 30px -20px 100px 10px rgba(47, 24, 251, 0.50);
+}
+
+.calculator-comp>h1 {
+  font-size: 2.1rem;
+  font-weight: 600;
+  color: black;
+}
+
+.calculator-comp>input {
+  width: 50%;
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+  outline: none;
+  padding: 8px;
+}
+
+.btn-grp {
+  display: flex;
+  justify-content: flex-start;
+  column-gap: 25px;
+}
+
+.btn-grp>button {
+  height: 35px;
+  width: 35px;
+  padding: 5px;
+  cursor: pointer;
+  background-color: black;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.success {
+  color: #47F558;
+  font-weight: 600;
+  font-size: large;
+  letter-spacing: 0.05rem;
+  text-shadow: -1px -1px 1px black, 1px -1px 1px black, -1px 1px 1px black, 1px 1px 1px black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.error {
+  color: #E33737;
+  font-weight: 600;
 }
